--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 # Make PROJECT_SOURCE_DIR, PROJECT_BINARY_DIR, and PROJECT_NAME available.
-set(PROJECT_NAME project1)
+set(PROJECT_NAME task1) 
 project(${PROJECT_NAME})
 
 set(CMAKE_CXX_FLAGS "-g -Wall")
@@ -15,22 +15,35 @@ set(CMAKE_CXX_FLAGS "-g -Wall")
 #----------------------------------------------------------------------------
 set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 include_directories(${COMMON_INCLUDES})
-file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
-list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
+
+
+set(SRC_FILES1 ${PROJECT_SOURCE_DIR}/src/task1.cpp)
+set(SRC_FILES2 ${PROJECT_SOURCE_DIR}/src/task2.cpp)
+set(SRC_FILES3 ${PROJECT_SOURCE_DIR}/src/task2.cpp
+               ${PROJECT_SOURCE_DIR}/src/task3.cpp)              
+set(SRC_FILES4 ${PROJECT_SOURCE_DIR}/src/task4.cpp)
+set(SRC_FILES5 ${PROJECT_SOURCE_DIR}/src/task5.cpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
-################################
-# Normal Libraries & Executables
-################################
-add_library(project1_lib ${SRC_FILES})
-add_executable(project1 ${PROJECT_SOURCE_DIR}/src/main.cpp)
-# Key idea: SEPARATE OUT your main() function into its own file so it can be its
-# own executable. Separating out main() means you can add this library to be
-# used elsewhere (e.g linking to the test executable).
+add_library(task1_lib ${SRC_FILES1})
+add_library(task2_lib ${SRC_FILES2})
+add_library(task3_lib ${SRC_FILES3})
+add_library(task4_lib ${SRC_FILES4})
+add_library(task5_lib ${SRC_FILES5})
 
-target_link_libraries(project1 project1_lib)
+add_executable(task1 ${PROJECT_SOURCE_DIR}/src/main1.cpp)
+add_executable(task2 ${PROJECT_SOURCE_DIR}/src/main2.cpp)
+add_executable(task3 ${PROJECT_SOURCE_DIR}/src/main3.cpp)
+add_executable(task4 ${PROJECT_SOURCE_DIR}/src/main4.cpp)
+add_executable(task5 ${PROJECT_SOURCE_DIR}/src/main5.cpp)
+
+target_link_libraries(task1 task1_lib)
+target_link_libraries(task2 task2_lib)
+target_link_libraries(task3 task3_lib)
+target_link_libraries(task4 task4_lib)
+target_link_libraries(task5 task5_lib)
 
 ################################
 # Testing
@@ -58,7 +71,7 @@ if (BUILD_TESTS)
   target_link_libraries(runUnitTests gtest gtest_main)
 
   # Extra linking for the project.
-  target_link_libraries(runUnitTests project1_lib)
+  target_link_libraries(runUnitTests task1_lib task2_lib task3_lib task4_lib task5_lib)
 
   # This is so you can do 'make test' to see all your tests run, instead of
   # manually running the executable runUnitTests to see those specific tests.
